<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_about_title"
        android:text="@string/about_title"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thank_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/thank_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_butterknife_list"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/ButterKnife_list"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_butterknife_license"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/ButterKnife_license"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_Gson_list"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/Gson_list"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_Gson_license"
        android:text="@string/Gson_license"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_picasso_list"
        android:text="@string/Picasso_list"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_picasso_license"
        android:text="@string/Picasso_license"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_volley_list"
        android:text="@string/Volley_list"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/tv_volley_license"
        android:text="@string/Volley_license"
        />

</LinearLayout>